@@ -131,7 +131,7 @@ public class LongSum extends EvalFunc<Long> implements Algebraic {
         long sum = 0;
         boolean sawNonNull = false;
         for (Iterator<Tuple> it = values.iterator(); it.hasNext();) {
-            Tuple t = (Tuple) it.next();
+            Tuple t = it.next();
             try {
                 Long l = (Long)(t.get(0));
                 if (l == null) continue;
