@@ -1810,7 +1810,7 @@ LogicalOperator OrderClause(LogicalPlan lp) :
 		{
             LogicalPlan sortColPlan = new LogicalPlan();
 		    LOProject projectStar = new LOProject(sortColPlan, new OperatorKey(scope, getNextId()), op, -1);
-			((LOProject)projectStar).setStar(true);
+			projectStar.setStar(true);
             sortColPlan.add(projectStar);
             sortColPlans.add(sortColPlan);
 			log.debug("Set star to true");
@@ -2605,7 +2605,7 @@ LogicalOperator NestedSortOrArrange(Schema over, Map<String, LogicalOperator> sp
 			{
                 LogicalPlan sortColPlan = new LogicalPlan();
 		        LOProject projectStar = new LOProject(sortColPlan, new OperatorKey(scope, getNextId()), eOp, -1);
-			    ((LOProject)projectStar).setStar(true);
+			    projectStar.setStar(true);
                 sortColPlan.add(projectStar);
                 sortColPlans.add(sortColPlan);
 				if(asc) {
