@@ -76,6 +76,8 @@ PIG-1020: Include an ant target to build pig.jar without hadoop libraries (daijy
 
 PIG-1033: javac warnings: deprecated hadoop APIs (daijy)
 
+PIG-1041: javac warnings: cast, fallthrough, serial (daijy)
+
 OPTIMIZATIONS
 
 BUG FIXES
